# Medic_bot

./: .gitignore
HEIGHT_WEIGHT_MODULE/: HEIGHT_WEIGHT_MODULE.ino
MEDIC_BOT_CONTROL_MAIN/: MEDIC_BOT_CONTROL_MAIN.ino  esp_now_module.cpp  esp_now_module.h  fingerprint_module.cpp  oximeter_module.cpp  oximeter_module.h  rfid_module.cpp
example/main/: CMakeLists.txt  display_manager.c  display_manager.h  lv_demo_bmi_dashboard.c  lv_demo_bmi_dashboard.h  lv_demo_bmi_reading.c  lv_demo_bmi_reading.h  main.c  main_example.c
example/main/analytics/: analytics_screen.c  analytics_screen.h
example/main/assets/: README.md  icon_bpm.c  icon_heart_beat.c  icon_temp.c  img_spo2_icons.c
example/main/dashboard/: dashboard_main.c  dashboard_main.h  dashboard_types.h
example/main/data/: health_data.c  health_data.h
example/main/database/: firebase_sdk.js
example/main/profile/: bmi_profile.c  bmi_profile.h
example/main/screens/: analytics_screen.c  analytics_screen.h  boot_screen.c  boot_screen.h  enroll_screen.c  enroll_screen.h  instruction_screen.c  instruction_screen.h  login_screen.c  login_screen.h  profile_screen.c  profile_screen.h
